--- a/finte/Cargo.toml
+++ b/finte/Cargo.toml
@@ -2,9 +2,11 @@
 name = "finte"
 version = "0.1.0"
 edition = "2018"
+description = "convert between integer and Rust enum"
+license = "MIT"
 
 [dependencies.finte-derive]
-path = "../finte-derive"
+version = "0.1.0"
 optional = true
 
 [features]
