--- a/finte-derive/Cargo.toml
+++ b/finte-derive/Cargo.toml
@@ -3,6 +3,7 @@ name = "finte-derive"
 version = "0.1.3"
 edition = "2018"
 description = "#[derive(IntEnum)] support for finte"
+repository = "https://github.com/hismito/finte"
 license = "MIT"
 
 [lib]
